{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 161,
  "lineage": "9776e9ac-53e8-5cf7-145a-c9214a1d637c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:029265948743:loadbalancer/app/flask-tf-load-balancer/5d53507c4fd85cc3",
            "arn_suffix": "app/flask-tf-load-balancer/5d53507c4fd85cc3",
            "dns_name": "flask-tf-load-balancer-931393807.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:029265948743:loadbalancer/app/flask-tf-load-balancer/5d53507c4fd85cc3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-tf-load-balancer",
            "security_groups": [
              "sg-0ee6bd30cfc20f7f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bfeb6b1ff64950d7"
              },
              {
                "subnet_id": "subnet-0c8a4383c430b163e"
              }
            ],
            "subnets": [
              "subnet-0bfeb6b1ff64950d7",
              "subnet-0c8a4383c430b163e"
            ],
            "vpc_id": "vpc-0c317a2edab7916ed",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:029265948743:listener/app/flask-tf-load-balancer/5d53507c4fd85cc3/811170ae3e5cf840",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:029265948743:targetgroup/flask-tf-target-group/fe0a9e6636ec46df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:029265948743:listener/app/flask-tf-load-balancer/5d53507c4fd85cc3/811170ae3e5cf840",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:029265948743:loadbalancer/app/flask-tf-load-balancer/5d53507c4fd85cc3",
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:029265948743:targetgroup/flask-tf-target-group/fe0a9e6636ec46df",
            "arn_suffix": "targetgroup/flask-tf-target-group/fe0a9e6636ec46df",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:029265948743:targetgroup/flask-tf-target-group/fe0a9e6636ec46df",
            "lambda_multi_value_headers_enabled": false,
            "name": "flask-tf-target-group",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01ee8478494eefbb8",
            "public_dns": "ec2-13-59-247-204.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.247.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04db286f0fdd30481",
            "public_dns": "ec2-52-14-107-157.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.107.157",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c95de9febe995da8",
            "owner_id": "029265948743",
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ee8478494eefbb8",
            "id": "nat-0658e3aa5cc39d64c",
            "network_interface_id": "eni-0b32e6ba612a3cc0a",
            "private_ip": "172.17.2.115",
            "public_ip": "13.59.247.204",
            "subnet_id": "subnet-0c8a4383c430b163e"
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04db286f0fdd30481",
            "id": "nat-015f2b4e62e0950ff",
            "network_interface_id": "eni-081de526a7efeb915",
            "private_ip": "172.17.3.83",
            "public_ip": "52.14.107.157",
            "subnet_id": "subnet-0bfeb6b1ff64950d7"
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c95de9febe995da8",
            "id": "r-rtb-08962d575f31afcb71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08962d575f31afcb7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05da665363b52d994",
            "owner_id": "029265948743",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0658e3aa5cc39d64c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085b08f94a776e4e1",
            "owner_id": "029265948743",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-015f2b4e62e0950ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0224519096fed1f58",
            "route_table_id": "rtb-05da665363b52d994",
            "subnet_id": "subnet-0e02dd201e10fae6a"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039b21387a10e7673",
            "route_table_id": "rtb-085b08f94a776e4e1",
            "subnet_id": "subnet-01482aa236004c276"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:029265948743:security-group/sg-0dc0415774f447144",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc0415774f447144",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee6bd30cfc20f7f2"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "flask-tf-ecs-tasks-security-group",
            "name_prefix": null,
            "owner_id": "029265948743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:029265948743:security-group/sg-0ee6bd30cfc20f7f2",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee6bd30cfc20f7f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "flask-tf-load-balancer-security-group",
            "name_prefix": null,
            "owner_id": "029265948743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:029265948743:subnet/subnet-0e02dd201e10fae6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0e02dd201e10fae6a",
            "map_public_ip_on_launch": false,
            "owner_id": "029265948743",
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:029265948743:subnet/subnet-01482aa236004c276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-01482aa236004c276",
            "map_public_ip_on_launch": false,
            "owner_id": "029265948743",
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:029265948743:subnet/subnet-0c8a4383c430b163e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-0c8a4383c430b163e",
            "map_public_ip_on_launch": true,
            "owner_id": "029265948743",
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:029265948743:subnet/subnet-0bfeb6b1ff64950d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0bfeb6b1ff64950d7",
            "map_public_ip_on_launch": true,
            "owner_id": "029265948743",
            "vpc_id": "vpc-0c317a2edab7916ed"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:029265948743:vpc/vpc-0c317a2edab7916ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0fab82a085719794c",
            "default_route_table_id": "rtb-08962d575f31afcb7",
            "default_security_group_id": "sg-05099ba9c02e981a3",
            "dhcp_options_id": "dopt-e235ce89",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c317a2edab7916ed",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08962d575f31afcb7",
            "owner_id": "029265948743"
          }
        }
      ]
    }
  ]
}